--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,33 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".ui.main.MainActivity">
+    tools:context=".ui.main.MainActivity"
+  >
 
     <!-- 1. 顶部应用栏容器 (这个和 Toolbar 滚动相关，无法用 LinearLayout 替代) -->
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
-
+        android:fitsSystemWindows="true"
+        android:background="@color/colorPrimary"
+     >
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
             app:contentScrim="@color/colorPrimary"
-            app:expandedTitleGravity="top"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-
+            app:statusBarScrim="@color/colorPrimary"
+            android:background="@color/colorPrimary"
+            android:layout_gravity="top"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            >
             <LinearLayout
                 android:id="@+id/search_LinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="?attr/actionBarSize"
-                android:background="#ededed"
+                android:background="@color/colorPrimary"
                 android:orientation="vertical"
-                android:padding="16dp">
-
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                app:layout_collapseMode="none"
+                >
                 <EditText
                     android:id="@+id/search_edit_text"
                     android:layout_width="match_parent"
@@ -44,14 +46,14 @@
                     android:padding="10dp" />
             </LinearLayout>
 
-
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:contentInsetEnd="0dp"
                 app:contentInsetStart="0dp"
-                app:layout_collapseMode="pin">
+                app:layout_collapseMode="pin"
+                android:background="@color/colorPrimary">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -59,7 +61,8 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingStart="16dp"
-                    android:paddingEnd="16dp">
+                    android:paddingEnd="16dp"
+                    android:paddingBottom="16dp">
 
                     <!-- 左侧部分 -->
                     <de.hdodenhof.circleimageview.CircleImageView
@@ -101,11 +104,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:srlEnableLoadMore="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:srlEnableAutoLoadMore="false"
+        android:background="@color/white"
+        >
 
         <com.scwang.smart.refresh.header.ClassicsHeader
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_messages"
             android:layout_width="match_parent"
@@ -114,9 +121,10 @@
             android:paddingBottom="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_message" />
+
         <com.scwang.smart.refresh.footer.ClassicsFooter
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
