--- a/app/src/main/res/layout/item_detail_mine.xml
+++ b/app/src/main/res/layout/item_detail_mine.xml
@@ -29,9 +29,8 @@
         android:textColor="@android:color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@id/iv_my_avatar"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_my_avatar"
         app:layout_constraintWidth_default="wrap"
-        tools:text="这是我自己发送的一条消息，也可能会很长很长很长。" />
+        tools:text="这是我自" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
