实现了本地的消息分发中心（目前仅支持文本消息）

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:background="@color/colorPrimary"
-        app:elevation="0dp"
-     >
+        app:elevation="0dp">
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,7 +88,7 @@
                         android:id="@+id/toolbar_sync_switch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="云同步"
+                        android:text="消息分发"
                         android:textColor="@android:color/white" />
 
                 </LinearLayout>
@@ -117,6 +116,8 @@
         <com.scwang.smart.refresh.header.ClassicsHeader
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_messages"
