--- a/app/src/main/res/layout/item_message_image.xml
+++ b/app/src/main/res/layout/item_message_image.xml
@@ -49,55 +49,20 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="好友昵称" />
 
-    <!-- 4. 消息摘要 -->
-    <TextView
-        android:id="@+id/tv_summary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <!-- 4.2 摘要 - 图片 -->
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/iv_summary_image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginTop="4dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="14sp"
-
-        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
-        app:layout_constraintEnd_toStartOf="@id/tv_unread_badge"
+        android:scaleType="centerCrop"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/tv_nickname"
         app:layout_constraintTop_toBottomOf="@id/tv_nickname"
-        tools:text="你收到了一个红包，请查收... " />
-<!--    &lt;!&ndash; 4.2 摘要 - 图片 &ndash;&gt;-->
-<!--    <com.google.android.material.imageview.ShapeableImageView-->
-<!--        android:id="@+id/iv_summary_image"-->
-<!--        android:layout_width="80dp"-->
-<!--        android:layout_height="80dp"-->
-<!--        android:layout_marginTop="4dp"-->
-<!--        android:scaleType="centerCrop"-->
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="@id/tv_nickname"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/tv_nickname"-->
-<!--        app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Rounded"-->
-<!--        tools:src="@tools:sample/backgrounds/scenic"-->
-<!--        tools:visibility="gone" />-->
-<!--    &lt;!&ndash; 4.3 摘要 - 运营类按钮 &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/btn_summary_action"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="4dp"-->
-<!--        android:background="@drawable/bg_meg_button"-->
-<!--        android:paddingStart="12dp"-->
-<!--        android:paddingTop="6dp"-->
-<!--        android:paddingEnd="12dp"-->
-<!--        android:paddingBottom="6dp"-->
-<!--        android:textColor="@android:color/white"-->
-<!--        android:textSize="18sp"-->
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="@id/tv_nickname"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/tv_nickname"-->
-<!--        tools:text="领取奖励"-->
-<!--        tools:visibility="visible" />-->
+        app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Rounded"
+        tools:src="@tools:sample/backgrounds/scenic"
+        tools:visibility="gone" />
 
     <!-- 5. 时间文案 -->
     <TextView
