--- a/app/src/main/res/layout/item_message_image.xml
+++ b/app/src/main/res/layout/item_message_image.xml
@@ -27,9 +27,8 @@
         android:textColor="@android:color/white"
         android:textSize="16sp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@id/tv_summary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_summary"
+        app:layout_constraintTop_toTopOf="@id/iv_summary_image"
         tools:text="1"
         tools:visibility="visible" />
 
@@ -56,13 +55,12 @@
         android:layout_height="80dp"
         android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
-        android:visibility="gone"
+        android:src="@drawable/myhead"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/tv_nickname"
         app:layout_constraintTop_toBottomOf="@id/tv_nickname"
         app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Rounded"
-        tools:src="@tools:sample/backgrounds/scenic"
-        tools:visibility="gone" />
+        tools:src="@tools:sample/backgrounds/scenic" />
 
     <!-- 5. 时间文案 -->
     <TextView
