--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,28 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.MainActivity"
     android:background="@color/colorPrimary"
     android:fitsSystemWindows="true"
-  >
+    tools:context=".ui.main.MainActivity">
 
     <!-- 1. 顶部应用栏容器 (这个和 Toolbar 滚动相关，无法用 LinearLayout 替代) -->
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:background="@color/colorPrimary"
+        android:fitsSystemWindows="true"
         app:elevation="0dp">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentScrim="@color/colorPrimary"
-            app:statusBarScrim="@color/colorPrimary"
-            android:background="@color/colorPrimary"
             android:layout_gravity="top"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:background="@color/colorPrimary"
+            app:contentScrim="@color/colorPrimary"
             app:elevation="0dp"
-            >
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:statusBarScrim="@color/colorPrimary">
+
             <LinearLayout
                 android:id="@+id/search_LinearLayout"
                 android:layout_width="match_parent"
@@ -34,12 +34,14 @@
                 android:orientation="vertical"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                app:layout_collapseMode="none"
-                >
+                app:layout_collapseMode="none">
+
                 <EditText
                     android:id="@+id/search_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textColorHint="#666666"
                     android:background="@drawable/bg_search_bar"
                     android:drawableStart="@android:drawable/ic_menu_search"
                     android:drawablePadding="8dp"
@@ -53,10 +55,10 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"
                 app:contentInsetEnd="0dp"
                 app:contentInsetStart="0dp"
-                app:layout_collapseMode="pin"
-                android:background="@color/colorPrimary">
+                app:layout_collapseMode="pin">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -64,8 +66,7 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    >
+                    android:paddingEnd="16dp">
 
                     <!-- 左侧部分 -->
                     <de.hdodenhof.circleimageview.CircleImageView
@@ -78,6 +79,7 @@
                         android:id="@+id/toolbar_nickname"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
                         android:text="K."
@@ -90,7 +92,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="消息分发"
-                        android:textColor="@android:color/white" />
+                        android:textColor="@android:color/black" />
 
                 </LinearLayout>
 
@@ -106,33 +108,65 @@
         android:id="@+id/smart_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srlEnableLoadMore="true"
+        android:layout_marginTop="16dp"
+        android:background="@color/white"
+        android:elevation="4dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:srlEnableAutoLoadMore="false"
-        android:background="@color/white"
-        android:layout_marginTop="16dp"
-        android:elevation="4dp"
-        >
+        app:srlEnableLoadMore="true">
 
         <com.scwang.smart.refresh.header.ClassicsHeader
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_messages"
+            android:layout_height="wrap_content" />
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingBottom="16dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-         />
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/empty_state_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="visible"
+                android:layout_gravity="center"
+                android:layout_marginBottom="80dp"
+                tools:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/empty_icon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/no_meg" /> <!-- 假设你有一个空状态的图标 -->
+
+                <TextView
+                    android:id="@+id/empty_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="暂无消息"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_messages"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="16dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:visibility="gone"/>
+        </FrameLayout>
+
+
 
         <com.scwang.smart.refresh.footer.ClassicsFooter
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
