--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -90,7 +90,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="发送"
+                android:textColor="@color/white"
+                android:background="@drawable/bg_button_send"
                 android:layout_gravity="bottom"
+                app:backgroundTint="@null"
+                android:textSize="16sp"
                 android:padding="0dp"/>
         </LinearLayout>
 
