--- a/app/src/main/res/layout/item_detail_button_other.xml
+++ b/app/src/main/res/layout/item_detail_button_other.xml
@@ -27,10 +27,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        app:backgroundTint="@null"
         android:background="@drawable/bg_meg_button"
-        android:padding="12dp"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
+        android:padding="8dp"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@id/iv_other_avatar"
